# cpp_practise

./: .gitignore  CMakeLists.txt  README.md  initial.md  main.cpp  run.sh
doc/: conda.md  cuda.md
driver/: CMakeLists.txt  config_gui.h  dma.cpp  dma.h  driver.cpp  driver.h
inference/: CMakeLists.txt  inference.cpp  inference.h
interface/: CMakeLists.txt  inference.cpp  inference.h
pcie/driver/: .cache.mk  Makefile  id_config.h  pango_pci_driver.c  pango_pci_driver.h
py/: clinet.py  debug.md
source/classes/: class.txt
test/: CMakeLists.txt  test.cc  test1.cc  test2cc
window/: CMakeLists.txt  ImageProcessor.h  window.cc  window.h
